--- a/Assignment10.html
+++ b/Assignment10.html
@@ -53,7 +53,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="4(3).jpg" alt="" width="100%" height="600px">
+      <img src="SamanthaNg.github.io/4(3).jpg" alt="" width="100%" height="600px">
     </div>
 
   </div>
