--- a/Assignment10.html
+++ b/Assignment10.html
@@ -41,7 +41,7 @@
 <div class="carousel slide" id="slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="1(2).jpg" alt="" width="100%" height="600px">
+      <img src="SamanthaNg.github.io/1(2).jpg" alt="" width="100%" height="600px">
     </div>
 
     <div class="carousel-item">
