--- a/Assignment10.html
+++ b/Assignment10.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="3(1).jpg" alt="" width="100%" height="600px">
+      <img src="SamanthaNg.github.io/3(1).jpg" alt="" width="100%" height="600px">
     </div>
 
     <div class="carousel-item">
