--- a/Assignment10.html
+++ b/Assignment10.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="2(1).jpg" alt="" width="100%" height="600px">
+      <img src="SamanthaNg.github.io/2(1).jpg" alt="" width="100%" height="600px">
     </div>
 
     <div class="carousel-item">
