--- a/Assignment10.html
+++ b/Assignment10.html
@@ -14,7 +14,7 @@
 
     <div class="navbar navbar-expand-sm navbar-light bg-success">
 
-      <a href="#" class="navbar-brand"> <img src="apple1(1).jpg" alt="" width="40%"> </a>
+      <a href="#" class="navbar-brand"> <img src="SamanthaNg.github.io/apple1(1).jpg" alt="" width="40%"> </a>
 
     <button type="button" name="button" class="navbar-toggler" data-toggle="collapes" data-target="menu"> <span class="navbar-toggler-icon"></span> </button>
 
