--- a/Mymajor.html
+++ b/Mymajor.html
@@ -178,7 +178,7 @@
                              </div>
 
       <br><br>
-       <a href="file:///C:/Users/Samantha%20Ng/Pictures/All%20Project-%20ET710/ThirdProject.html"><button type="button" name="button">Back to Home</button></a>
+       <a href="SamanthaNg.github.io/ThirdProject.html"><button type="button" name="button">Back to Home</button></a>
       <br><br>
 </body>
 
