--- a/Mymajor.html
+++ b/Mymajor.html
@@ -13,7 +13,7 @@
 <body>
 
  <div>
-   <img src="SamanthaNg.github.io/Digital-Art-and-Design.jpg" width="100%" align="center">
+   <img src="https://samanthang.github.io/Digital-Art-and-Design.jpg" width="100%" align="center">
  </div>
 <br><br><br>
 <div class="Tittle">
