--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -23,7 +23,7 @@
       <li class="nav-item"><a class="nav-link" href="file:///C:/Users/Samantha%20Ng/Pictures/All%20Project-%20ET710/ThirdProject.html#" class="nav-link active">HOME</a></li>
       <li class=""><a href="#openModalIII" class="nav-link active">AELF-INTRODUCTION</a></li>
       <li class=""><a href="https://samanthang.github.io/Mymajor.html" class="nav-link active">MY MAJOR</a></li>
-      <li class=""><a href="#" class="nav-link active">CAREER GOALS</a></li>
+      <li class=""><a href="https://samanthang.github.io/CareerGoal.html" class="nav-link active">CAREER GOALS</a></li>
     </ul>
 
   </div>
