--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -14,7 +14,7 @@
 
 <div class="navbar navbar-expand-sm navbar-light ">
 
-  <a href="#" class="navbar-brand">Navbar</a>
+  <a href="#" class="navbar-brand">Ng.Portfolio</a>
 
 <button type="button" name="button" class="navbar-toggler" data-toggle="collapes" data-target="menu"> <span class="navbar-toggler-icon"></span> </button>
 
@@ -56,7 +56,7 @@
 
 
 <div class="Samantha">
-  <h1 class="text-center text-uppercase red-text py-3 px-6 font-italic text-info">Hello my friends, This Is Samantha Ng!</h1>
+  <h1 class="text-center text-uppercase red-text py-3 px-6 font-italic text-info">SAMANTHA NG'S PORTFOLIO</h1>
 </div>
 
       <br> <br> <br> <br>
