--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -99,7 +99,7 @@
   <div class="col-sm-4 ml-5">
     <div class="card card1">
       <div class="card-body bg-light">
-        <a href="#openModalII" class="btn"><img src="samanthang.github.io/Project2pic.jpeg" class="img-fluid my-2" alt=""></a>
+        <a href="#openModalII" class="btn"><img src="https://samanthang.github.io/Project2pic.jpeg" class="img-fluid my-2" alt=""></a>
         <p class="card-text font1">HTML and CSS Project: Sales Website</p>
       </div>
     </div>
