--- a/Mymajor.html
+++ b/Mymajor.html
@@ -176,6 +176,36 @@
                                   </div>
                                 </div>
                              </div>
+  
+                               <br><br>
+                             <h3 class="ET710">ET710-WORKS</h3>
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<ol class="carousel-indicators">
+  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+</ol>
+<div class="carousel-inner">
+  <div class="carousel-item active">
+  <a href="file:///C:/Users/Samantha%20Ng/Pictures/Assignment10-ET710/Assignment10-ET710.html"><img src="Assignment10pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
+  </div>
+  <div class="carousel-item">
+  <a href="file:///C:/Users/Samantha%20Ng/Pictures/Assignment9-ET710/Assignment9.html"><img src="Assignment9pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
+  </div>
+  <div class="carousel-item">
+    <a href="file:///C:/Users/Samantha%20Ng/Pictures/Assignment8_ET710/Assignment8.html"><img src="Assignment8pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
+  </div>
+</div>
+<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+</div>
 
       <br><br>
        <a href="https://samanthang.github.io/ThirdProject.html"><button type="button" name="button">Back to Home</button></a>
