--- a/Mymajor.html
+++ b/Mymajor.html
@@ -191,7 +191,7 @@
 </ol>
 <div class="carousel-inner">
   <div class="carousel-item active">
-  <a href="file:///C:/Users/Samantha%20Ng/Pictures/Assignment10-ET710/Assignment10-ET710.html"><img src="Assignment10pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
+  <a href="https://samanthang.github.io/Assignment10.html"><img src="Assignment10pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
   </div>
   <div class="carousel-item">
   <a href="file:///C:/Users/Samantha%20Ng/Pictures/Assignment9-ET710/Assignment9.html"><img src="Assignment9pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
