--- a/Mymajor.html
+++ b/Mymajor.html
@@ -197,7 +197,7 @@
   <a href="https://samanthang.github.io/Index.html"><img src="Assignment9pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
   </div>
   <div class="carousel-item">
-    <a href="file:///C:/Users/Samantha%20Ng/Pictures/Assignment8_ET710/Assignment8.html"><img src="Assignment8pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
+    <a href="https://samanthang.github.io/Assignment8.html"><img src="Assignment8pic.jpeg" class="d-block w-100" alt="" height="350px"></a>
   </div>
 </div>
 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
