--- a/Mymajor.html
+++ b/Mymajor.html
@@ -18,6 +18,11 @@
  <div>
    <img src="https://samanthang.github.io/Digital-Art-and-Design.jpg" width="100%" align="center">
  </div>
+   <br>
+       <form class="form-inline my-2 my-lg-0 search">
+           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+         </form>
 <br><br><br>
 <div class="Tittle">
   <h1>Digital Art and Design</h1>
