--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -20,7 +20,14 @@
 
   <div id="menu" class="collapes navbar-collapes">
     <ul class="navbar-nav">
-      <li class="nav-item"><a class="nav-link" href="file:///C:/Users/Samantha%20Ng/Pictures/All%20Project-%20ET710/ThirdProject.html#" class="nav-link active">HOME</a></li>
+       <div class="dropdown">
+    <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">HOME
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#openmodalIIII">Web Technology Projects</a></li>
+      <li><a href="#openmodalIIIII">Class Activities</a></li>
+    </ul>
+  </div>
       <li class=""><a href="#openModalIII" class="nav-link active">AELF-INTRODUCTION</a></li>
       <li class=""><a href="https://samanthang.github.io/Mymajor.html" class="nav-link active">MY MAJOR</a></li>
       <li class=""><a href="https://samanthang.github.io/CareerGoal.html" class="nav-link active">CAREER GOALS</a></li>
@@ -73,7 +80,7 @@
   <div class="BigBox">
 
   <div class="col-sm-12 p-1 bg-dark text-white">
-  <p><h3 class="font-weight-lighter">Web Technology Projects</h3></p>
+  <p><h3 class="font-weight-lighter" id="openmodalIIIII">Web Technology Projects</h3></p>
   </div>
 
 
@@ -170,7 +177,7 @@
 <br><br><br>
 
     <div class="col-sm-12 p-1 bg-dark text-white">
-    <p><h3 class="font-weight-lighter">Class Activities</h3></p>
+    <p><h3 class="font-weight-lighter" id="openmodalIIIIII">Class Activities</h3></p>
     </div>
 
 <br>
