--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -6,8 +6,10 @@
      <title>Final Project</title>
      <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
      <link rel="stylesheet" type="text/css" href="https://samanthang.github.io/ThirdProject.css">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <body style="background-color:#dbd5d6;">
 
@@ -80,7 +82,7 @@
   <div class="BigBox">
 
   <div class="col-sm-12 p-1 bg-dark text-white">
-  <p><h3 class="font-weight-lighter" id="openmodalIIIII">Web Technology Projects</h3></p>
+  <p><h3 class="font-weight-lighter" id="openmodalIIII">Web Technology Projects</h3></p>
   </div>
 
 
@@ -177,7 +179,7 @@
 <br><br><br>
 
     <div class="col-sm-12 p-1 bg-dark text-white">
-    <p><h3 class="font-weight-lighter" id="openmodalIIIIII">Class Activities</h3></p>
+    <p><h3 class="font-weight-lighter" id="openmodalIIIII">Class Activities</h3></p>
     </div>
 
 <br>
