--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -28,9 +28,9 @@
       <li><a href="#openmodalIIIII">Class Activities</a></li>
     </ul>
   </div>
-      <li class=""><a href="#openModalIII" class="nav-link active">AELF-INTRODUCTION</a></li>
-      <li class=""><a href="https://samanthang.github.io/Mymajor.html" class="nav-link active">MY MAJOR</a></li>
-      <li class=""><a href="https://samanthang.github.io/CareerGoal.html" class="nav-link active">CAREER GOALS</a></li>
+      <a href="#openModalIII" class="nav-link active">AELF-INTRODUCTION</a>
+      <a href="https://samanthang.github.io/Mymajor.html" class="nav-link active">MY MAJOR</a>
+      <a href="https://samanthang.github.io/CareerGoal.html" class="nav-link active">CAREER GOALS</a>
     </ul>
 
   </div>
