--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -19,8 +19,9 @@
   <a href="#" class="navbar-brand">Ng.Portfolio</a>
 
 <button type="button" name="button" class="navbar-toggler" data-toggle="collapes" data-target="menu"> <span class="navbar-toggler-icon"></span> </button>
-
-       <div class="dropdown">
+  <div id="menu" class="collapes navbar-collapes">
+    <ul class="navbar-nav">
+      <div class="dropdown">
     <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">HOME
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
@@ -28,13 +29,13 @@
       <li><a href="#openmodalIIIII">Class Activities</a></li>
     </ul>
   </div>
-      <a href="#openModalIII" class="nav-link active">AELF-INTRODUCTION</a>
-      <a href="https://samanthang.github.io/Mymajor.html" class="nav-link active">MY MAJOR</a>
-      <a href="https://samanthang.github.io/CareerGoal.html" class="nav-link active">CAREER GOALS</a>
+      <li class=""><a href="#openModalIII" class="nav-link active">AELF-INTRODUCTION</a></li>
+      <li class=""><a href="https://samanthang.github.io/Mymajor.html" class="nav-link active">MY MAJOR</a></li>
+      <li class=""><a href="https://samanthang.github.io/CareerGoal.html" class="nav-link active">CAREER GOALS</a></li>
     </ul>
 
   </div>
-
+    </div>
 
 
 
