--- a/Mymajor.html
+++ b/Mymajor.html
@@ -148,7 +148,7 @@
                 <hr>
                   <div class="detailinbox">
                     <img class="imginwindowII" src="Arts290_Logo.jpg" alt="">
-                      <img class="imginwindowII" src="blue_robot.jpg" alt="">
+                      <img class="imginwindowII" src="https://samanthang.github.io/Blue_robot.jpg" alt="">
                     </div>
                 <div class="messageimgbox">
                   <br>
