--- a/Mymajor.html
+++ b/Mymajor.html
@@ -79,7 +79,7 @@
     <br><br>
 
     <div class="row">
-      &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+      &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  
       <div class="col-sm-3 ml-5">
         <div class="card card1">
           <div class="card-body bg-light">
