--- a/CareerGoal.html
+++ b/CareerGoal.html
@@ -61,7 +61,7 @@
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<a href="https://samanthang.github.io/ThirdProject.html#"><button type="button" name="button">Back to Homa</button></a>
+<a href="https://samanthang.github.io/ThirdProject.html#"><button type="button" name="button">Back to Home</button></a>
 
 
 
