--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -129,7 +129,7 @@
           <div class="messageimgbox">
              <p>Project 1 consists in creating an informative website. The information of the website is about a place (city, country, or state) where you want to inform people about that place.</p>
              <p>I create a website about <b>Iceland</b>. I chose Iceland because it is a different place to USA especially for the bolial lights. As a student of engineering technologicial, I love technology and scince, therefore in my concept the Northern lights, which I can appreciate in Iceland, is a magnificent nature of planet Earth and by which we can appreciate it through lights. One of my future visits will beto see with my own eyes this wonderful natural light.</p>
-             <a href="file:///C:/Users/Samantha%20Ng/Pictures/All%20Project-%20ET710/Project1-ET710/Project%201.html">Visit My <b>Iceland</b> Project</a>
+             <a href="https://samanthang.github.io/Project%201.html">Visit My <b>Iceland</b> Project</a>
 
           </div>
                   <div class="whiteline">
