--- a/ThirdProject.html
+++ b/ThirdProject.html
@@ -157,7 +157,7 @@
           <div class="messageimgbox">
              <p>Project 2 consists of creating a sales webpage. The purpose of projct 2 is to applay the knowledge of colors, image manipulation, animation, slideshow, and modal window using CSS to create a simple sales page.</p>
              <p>I create a website aboute <B>Josefina Body Care Collection</b>. On this page I presented my favourite body care products. In the introduction, I created a slideshow to adverttise the products sales, and I used hero images to present the body care products. In the product list, I presented three lotions and three sets of my favourite body care. I also designed a modal window to present each product.</p>
-             <a href="file:///C:/Users/Samantha%20Ng/Pictures/All%20Project-%20ET710/Project2_ET710.html">Visit My <b>Josefina Body Care Collection</b> Project</a>
+             <a href="SamanthaNg.github.io/Project2_ET710.html">Visit My <b>Josefina Body Care Collection</b> Project</a>
 
           </div>
                   <div class="whiteline">
