--- a/Project 1.html
+++ b/Project 1.html
@@ -47,7 +47,7 @@ text-align:left;">
 <br/>
 <figure>
   <dd>
-<a href="file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/Ice%20climbing%20&%20hiking%20on%20glaciers.html"><img src="4.jpg.jpg" withd="350" height="250" align="left" style="border:2px solid blue"></a>
+<a href="https://samanthang.github.io/Ice%20climbing%20&%20hiking%20on%20glaciers.html"><img src="4.jpg.jpg" withd="350" height="250" align="left" style="border:2px solid blue"></a>
   </dd>
 </figure>
 <br/>
@@ -145,7 +145,7 @@ text-align:left;">
 <br/>
 <hr>
 <nav align="center">
-  <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/The%20Northen%20Lights.html">The Northen Light</a> | <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/Ice%20climbing%20&%20hiking%20on%20glaciers.html">Hiking On Glacier</a> | <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/Project%201.html">Contact Us</a>
+  <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/The%20Northen%20Lights.html">The Northen Light</a> | <a href = "https://samanthang.github.io/Ice%20climbing%20&%20hiking%20on%20glaciers.html">Hiking On Glacier</a> | <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/Project%201.html">Contact Us</a>
 </nav>
 <p align="center"><b>2020 @ project 1 by Samantha Ng</b></p>
 </body>
