Update The Northen Lights.html

--- a/The Northen Lights.html
+++ b/The Northen Lights.html
@@ -19,7 +19,7 @@
 <p>In the polar latitudes, auroras can appear aon any dark night. Long winter nights are good but not necessaryly the best time. Near equinixes in March and September, the Earth's magnetic field lets more solar particles interact with the atmosphere, creating aurora season! I suggest autumnal equinox in Setember, when there are pleasant temperatures in polar latitudes. Find the dark hours of your locaton here, or by using a sky guide app.</p>
 <hr>
 <nav align="center">
-    <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/The%20Northen%20Lights.html">The Northen Light</a> | <a href = "https://samanthang.github.io/Ice%20climbing%20&%20hiking%20on%20glaciers.html">Hiking On Glacier</a> | <a href = "https://samanthang.github.io/Project%201.html">Contact Us</a>
+    <a href = "https://samanthang.github.io/The%20Northen%20Lights.html">The Northen Light</a> | <a href = "https://samanthang.github.io/Ice%20climbing%20&%20hiking%20on%20glaciers.html">Hiking On Glacier</a> | <a href = "https://samanthang.github.io/Project%201.html">Contact Us</a>
 </nav>
 <p align="center"><b>2020 @ project 1 by Samantha Ng</b></p>
 
