Update Ice climbing & hiking on glaciers.html

--- a/Ice climbing & hiking on glaciers.html
+++ b/Ice climbing & hiking on glaciers.html
@@ -18,7 +18,7 @@
 <p>Sólheimajökull glacier is an outlet from the mighty Mýrdalsjökull and is surrounded by some of Iceland's most grand volcanoes and during summertime, a glacier lagoon from in front of the glacier only adding to the charm of the location. This popular day tour is the perfect way to get in real contact with the true reason behind the name Ice-land!</p>
 <hr>
 <nav align="center">
-    <a href = "file:///C:/Users/Samantha%20Ng/Pictures/New%20folder/week%202/The%20Northen%20Lights.html">The Northen Light</a> | <a href = "https://samanthang.github.io/Ice%20climbing%20&%20hiking%20on%20glaciers.html">Hiking On Glacier</a> | <a href = "https://samanthang.github.io/Project%201.html">Contact Us</a>
+    <a href = "https://samanthang.github.io/The%20Northen%20Lights.html">The Northen Light</a> | <a href = "https://samanthang.github.io/Ice%20climbing%20&%20hiking%20on%20glaciers.html">Hiking On Glacier</a> | <a href = "https://samanthang.github.io/Project%201.html">Contact Us</a>
 </nav>
 <p align="center"><b>2020 @ project 1 by Samantha Ng</b></p>
 
